--- a/JiuJiuWeb/src/app/AdminWebsite/admin/right/add-article/add-article.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/right/add-article/add-article.component.html
@@ -15,8 +15,11 @@
             <div id="setting-profile" class="setting-wrap setting-profile">
 
               <image-upload [buttonCaption]="'选择图片'"
-                              [dropBoxMessage]="'拖动到此区域'"
-                              [clearButtonCaption]="'删除'"></image-upload>
+                            [dropBoxMessage]="'拖动到此区域'"
+                            [clearButtonCaption]="'删除'"
+                            (onFileUploadFinish)="imageUploaded($event)"
+                            (onRemove)="imageRemoved($event)">
+              </image-upload>
 
               <hr>
               <app-ckeditor></app-ckeditor>
