--- a/JiuJiuWeb/src/app/AdminWebsite/admin/right/add-article/ckeditor/ckeditor.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/right/add-article/ckeditor/ckeditor.component.html
@@ -1,5 +1,3 @@
-<p>
-  ckeditor works!
-</p>
+
 <ckeditor [(ngModel)]="ckeditorContent" debounce="500"  [config]="config"></ckeditor>
-输入的内容：<br> {{ ckeditorContent }}
+<!--输入的内容：<br> {{ ckeditorContent }}-->
