--- a/JiuJiuWeb/src/app/AdminWebsite/admin/right/add-article/add-article.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/right/add-article/add-article.component.html
@@ -19,8 +19,8 @@
                     <input type="text" name="title" class="form-control"
                            id="title" placeholder="请输入标题" required
                            [(ngModel)]="data.title"   #title="ngModel">
-                    <span style="color:red">*</span>
                     </div>
+                  <span style="color:red;">*</span>
                 </div>
                 <div class="form-group">
                   <label for="author" class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;">文章作者</label>
@@ -28,12 +28,14 @@
                     <input type="text" name="author" [(ngModel)]="data.author"
                            class="form-control" id="author" placeholder="请输入作者">
                   </div>
+                  <span style="color:red;">*</span>
                 </div>
                 <div class="form-group">
                   <label for="keywords" class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;">关键字</label>
                   <div class="col-lg-6 col-md-6">
                     <input type="text" name="keywords" [(ngModel)]="data.keywords" class="form-control" id="keywords" placeholder="请输入关键字，以空格间隔">
                   </div>
+
                 </div>
                 <div class="form-group">
                   <label for="desc" class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;">文章描述</label>
@@ -50,6 +52,7 @@
                       <option>运动</option>
                     </select>
                   </div>
+                  <span style="color:red;">*</span>
                 </div>
                 <div class="form-group" >
                   <label for="toggle-button" class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;" >是否推荐</label>
