--- a/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
@@ -54,12 +54,12 @@
                 </div>-->
               </div>
 
-              <form id="profile" >
+              <form id="profile" #myForm="ngForm" (ngSubmit)="onSubmit(myForm.value,myForm.valid)" novalidate>
 
                 <div class="wlfg-wrap clearfix">
                   <label class="label-name" for="nick" >昵称：</label>
                   <div class="rlf-group">
-                    <input type="text" name="nickname" id="nick"  autocomplete="off"  data-validate="require-nick"  class="moco-form-control" value="Sequin_YF" placeholder="请输入昵称."/>
+                    <input type="text" ngModel name="nickname" id="nick"  autocomplete="off" class="moco-form-control" value="Sequin_YF" placeholder="请输入昵称."/>
                     <p class="rlf-tip-wrap errorHint color-red" ></p>
                   </div>
                 </div>
@@ -67,7 +67,7 @@
                 <div class="wlfg-wrap clearfix">
                   <label class="label-name" for="nick" >电子邮件：</label>
                   <div class="rlf-group">
-                    <input type="text" name="email" id="email"  autocomplete="off"  data-validate="require-nick"  class="moco-form-control" value="12345@qq.com" placeholder="请输入邮箱."/>
+                    <input type="text" ngModel name="email" id="email"  autocomplete="off"  class="moco-form-control" value="12345@qq.com" placeholder="请输入邮箱."/>
                     <p class="rlf-tip-wrap errorHint color-red" ></p>
                   </div>
                 </div>
@@ -75,7 +75,7 @@
                 <div class="wlfg-wrap clearfix">
                   <label class="label-name" for="birthday" >出生日期：</label>
                   <div class="rlf-group">
-                    <input type="date" name="birthday" id="birthday"  autocomplete="off"  data-validate="require-nick"  class="moco-form-control">
+                    <input type="date" ngModel name="birthday" id="birthday"  autocomplete="off" class="moco-form-control">
                     <p class="rlf-tip-wrap errorHint color-red" ></p>
                   </div>
                 </div>
@@ -83,7 +83,7 @@
                 <div class="wlfg-wrap clearfix">
                   <label class="label-name" for="province-select">地区：</label>
                   <div class="rlf-group profile-address">
-                    <select id="province-select" class='moco-form-control' hidefocus="true">
+                    <select id="province-select" ngModel name="province" class='moco-form-control' hidefocus="true">
                       <option value="0">选择省份</option>
                       <option value="1">北京</option>
                       <option value="2">天津</option>
@@ -129,29 +129,18 @@
                 <div class="wlfg-wrap clearfix">
                   <label class="label-name h16 lh16">性别：</label>
                   <div class="rlf-group rlf-radio-group">
-                    <label class="lh16"><input type="radio" hidefocus="true" value="0" name="sex">保密</label>
-                    <label class="lh16"><input type="radio" hidefocus="true" value="1" name="sex">男</label>
-                    <label class="lh16"><input type="radio" hidefocus="true" value="2" checked="checked"
-                                               name="sex">女</label>
+                    <label class="lh16"><input ngModel type="radio" hidefocus="true" value="0" name="sex">保密</label>
+                    <label class="lh16"><input ngModel type="radio" hidefocus="true" value="1" name="sex">男</label>
+                    <label class="lh16"><input ngModel type="radio" hidefocus="true" value="2" checked="checked" name="sex">女</label>
                     <p class="rlf-tip-wrap errorHint color-red"></p>
                   </div>
                 </div>
 
 
                 <div class="wlfg-wrap clearfix">
-                  <label class="label-name" for="aboutme">个性签名：</label>
-                  <div class="rlf-group">
-                    <div class="pr">
-                      <textarea name="aboutme"  id="aboutme"  rows="5" class="noresize js-sign moco-form-control"></textarea>
-                      <p class="numCanInput js-numCanInput ">还可以输入128个字符</p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="wlfg-wrap clearfix">
                   <label class="label-name" for="profile-submit"></label>
                   <div class="rlf-group">
-                    <a id="profile-submit"  hidefocus="true"  aria-role="button" class="rlf-btn-green btn-block profile-btn" [routerLink]="['/user']">保存</a>
+                    <button type="submit" id="profile-submit"  hidefocus="true"  class="rlf-btn-green btn-block profile-btn" [routerLink]="['/user']">保存</button>
                   </div>
                 </div>
               </form>
