--- a/JiuJiuWeb/src/app/UserWebsite/user/user.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/user/user.component.html
@@ -4,7 +4,7 @@
 <div>
   <ul class="listbox">
     <a>
-    <li *ngFor="let item of cates" (click)=onclick() [ngStyle]="{cour:isclick}">{{item.name}} </li>
+    <li *ngFor="let item of cates" (click)="search(item)" [ngStyle]="{cour:isclick}">{{item.name}} </li>
     </a>
   </ul>
 </div>
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div style="height:15px"></div>
-    <div id="hm_t_57953">
+    <div>
       <div style="display: block; margin: 0px; padding: 0px; float: none; clear: none; overflow: hidden; position: relative; border: 0px none; background: transparent none repeat scroll 0% 0%; max-width: none; max-height: none; border-radius: 0px; box-shadow: none; transition: none 0s ease 0s ; text-align: left; box-sizing: content-box; width: 300px;">
         <div style="width: 298px;" class="hm-t-container">
           <div class="hm-t-main">
