--- a/JiuJiuWeb/src/app/HomePage/aboutus/aboutus.component.html
+++ b/JiuJiuWeb/src/app/HomePage/aboutus/aboutus.component.html
@@ -7,7 +7,7 @@
     <span>网站介绍</span>
   </div>
   <div class="contact-list">
-    <p>该网站/。。。。</p>
+    <p>本网站基于智慧校园服务平台，从学习、生活等各个方面，致力于把学校变成一个完美校园，与学校共同创造，服务学生“轻松生活，快乐成长”！</p>
   </div>
 </div>
 
@@ -27,8 +27,8 @@
     <span>联系我们</span>
   </div>
   <div class="contact-list">
-    <p class="inline-p">邮箱: JiuJiuWeb@163.com(商务)</p>
+    <p class="inline-p">邮箱: JiuJiuWeb@163.com</p>
     <p>400-888-8888(客服)</p>
-    <p>地址: 天津大学北洋园校区软件学院</p>
+    <p>地址: 天津大学北洋园校区第五十五教学楼A座软件学院</p>
   </div>
 </div>
