--- a/JiuJiuWeb/src/app/AdminWebsite/admin/right/admin-right/stat/stat.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/right/admin-right/stat/stat.component.html
@@ -1,9 +1,19 @@
-<div class="row">
-  <div class="col-xs-4 feature">
-    <div class="product-container {{color}}" >
-      <div class="name">{{name}}</div>
-      <div class="interest">{{count}}<span class="percent">个</span></div>
-      <div class="details "  >查看详情</div>
+
+<div class="single-member effect-3">
+  <div class="member-image">
+    <img src="assets/images/{{name}}.jpg" alt="">
+  </div>
+  <div class="member-info">
+    <h3>{{name}}</h3>
+    <h5>{{title}}</h5>
+    <p>描述信息：{{count}}人</p>
+
+    <div class="social-touch">
+      <!--
+      <a class="fb-touch" href="#"></a>
+      <a class="tweet-touch" href="#"></a>
+      <a class="linkedin-touch" href="#"></a>
+      -->
     </div>
   </div>
 </div>
