--- a/JiuJiuWeb/src/app/AdminWebsite/admin/right/admin-right/stat/stat.component.scss
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/right/admin-right/stat/stat.component.scss
@@ -72,7 +72,7 @@ p {font-size: 14px;
   line-height: 33px;
 }
 .effect-3 .member-image{
-  border-bottom: 5px solid #66bde5;
+  border-bottom: 5px solid #8fc7bb;
   transition: 0.4s;
   height: 212px;
   width: 100%;
@@ -89,7 +89,7 @@ p {font-size: 14px;
   vertical-align: bottom;
 }
 .effect-3 .social-touch{
-  background-color: #77c6e5;
+  background-color: #8fc7bb;
   float: left;
   left: 0;
   bottom: 0;
