--- a/JiuJiuWeb/src/app/app.component.html
+++ b/JiuJiuWeb/src/app/app.component.html
@@ -14,16 +14,15 @@
         <li><a [routerLink]="['/page']">首页</a></li>
         <li><a  [routerLink]="['/aboutus']">关于我们</a></li>
         <li><a *ngIf="check()" [routerLink]="['/login']">登录</a></li>
-        <li *ngIf="!check()">
-          <div class="col">
-          <div ngbDropdown class="d-inline-block">
-            <button ngbDropdownToggle>欢迎您</button>
-            <div ngbDropdownMenu aria-labelledby="dropdownBasic1" ngbDropdownToggle>
-              <a class="dropdown-item" [routerLink]="['/usercenter']">个人中心</a>
-              <a class="dropdown-item" [routerLink]="['/login']">退出登录</a>
-            </div>
-          </div>
-          </div>
+        <li *ngIf="!check()" class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            欢迎您！
+            <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a [routerLink]="['/usercenter']">个人中心</a></li>
+            <li><a (click)="exit()">退出登录</a></li>
+          </ul>
         </li>
         <li><a *ngIf="check()" [routerLink]="['/signup']">注册</a></li>
       </ul>
@@ -33,19 +32,6 @@
 
 <div class="container main-container">
   <router-outlet></router-outlet>
-</div>
-
-<div class="row">
-  <div class="col">
-    <div ngbDropdown class="d-inline-block">
-      <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Toggle dropdown</button>
-      <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-        <button class="dropdown-item">Action - 1</button>
-        <button class="dropdown-item">Another Action</button>
-        <button class="dropdown-item">Something else is here</button>
-      </div>
-    </div>
-  </div>
 </div>
 
 <nav class="navbar-static-bottom">
