--- a/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
@@ -18,27 +18,11 @@
           <div class="cb"></div>
         </div>
         <div class="contentBox">
-          <div class="formBox">
-            <div id="setting-profile" class="setting-wrap setting-profile">
-
-              <div class="wlfg-wrap clearfix ">
+        <div class="formBox">
+        <div id="setting-profile" class="setting-wrap setting-profile">
+        <form id="profile" #myForm="ngForm" (ngSubmit)="onSubmit(myForm.value,myForm.valid)" novalidate>
+          <div class="wlfg-wrap clearfix ">
                 <label class="label-name">头像：</label>
-                <!--<div class="rlf-group">
-                  <img class="fl avator-img" id="js-portrait" src="http://img.mukewang.com/58492fe600012e8e01800180-200-200.jpg" data-portrait="58492fe600012e8e01800180" width="180" height="180">
-                  <div class="fl ml20 pr">
-                    <div><input type="button" hidefocus="true" value="换一换" class="js-avator-try avator-try"></div>
-                    <div id="avator-btns" class="avator-btn-inner">
--->
-
-
-                     <!-- <div class="avator-btn-wrap">
-                        <form target="uploadtarget" action="postpic" method="post" enctype="multipart/form-data">
-                          <a href="javascript:void(0)" hidefocus="true" class="avator-btn-fake">上传头像</a>
-                          <input class="hide" type="file" title="上传头像" name="fileField" id="upload" accept="image/*">
-                          <input class="hide" type="hidden" name="type" value="1">
-                        </form>
-                        <iframe src="about:blank" id="uploadtarget" name="uploadtarget" frameborder="0" style="display:none;"></iframe>
-                      </div>-->
                 <div style="margin-top: 50px;margin-bottom: 20px">
                   <image-upload [buttonCaption]="'选择图片'"
                                 [dropBoxMessage]="'拖动图片到这里'"
@@ -46,24 +30,14 @@
                                 (onFileUploadFinish)="imageUploaded($event)"
                                 (onRemove)="imageRemoved($event)"></image-upload>
                 </div>
-
-                   <!-- </div>
-                  </div>
-                  <div class="cb"></div>
-                  <p class="rlf-tip-wrap errorHint color-red" ></p>
-                </div>-->
               </div>
-
-              <form id="profile" #myForm="ngForm" (ngSubmit)="onSubmit(myForm.value,myForm.valid)" novalidate>
-
                 <div class="wlfg-wrap clearfix">
                   <label class="label-name" for="nick" >昵称：</label>
                   <div class="rlf-group">
-                    <input type="text" ngModel name="nickname" id="nick"  autocomplete="off" class="moco-form-control" value="Sequin_YF" placeholder="请输入昵称."/>
+                    <input type="text" ngModel name="username" id="nick"  autocomplete="off" class="moco-form-control" value="Sequin_YF" placeholder="请输入昵称."/>
                     <p class="rlf-tip-wrap errorHint color-red" ></p>
                   </div>
                 </div>
-
                 <div class="wlfg-wrap clearfix">
                   <label class="label-name" for="nick" >电子邮件：</label>
                   <div class="rlf-group">
@@ -71,7 +45,6 @@
                     <p class="rlf-tip-wrap errorHint color-red" ></p>
                   </div>
                 </div>
-
                 <div class="wlfg-wrap clearfix">
                   <label class="label-name" for="birthday" >出生日期：</label>
                   <div class="rlf-group">
@@ -79,7 +52,6 @@
                     <p class="rlf-tip-wrap errorHint color-red" ></p>
                   </div>
                 </div>
-
                 <div class="wlfg-wrap clearfix">
                   <label class="label-name" for="province-select">地区：</label>
                   <div class="rlf-group profile-address">
@@ -125,7 +97,6 @@
                     <p class="rlf-tip-wrap errorHint color-red"></p>
                   </div>
                 </div>
-
                 <div class="wlfg-wrap clearfix">
                   <label class="label-name h16 lh16">性别：</label>
                   <div class="rlf-group rlf-radio-group">
@@ -135,28 +106,20 @@
                     <p class="rlf-tip-wrap errorHint color-red"></p>
                   </div>
                 </div>
-
-
                 <div class="wlfg-wrap clearfix">
                   <label class="label-name" for="profile-submit"></label>
                   <div class="rlf-group">
-                    <button type="submit" (click)="save()" id="profile-submit"  hidefocus="true"  class="rlf-btn-green btn-block profile-btn" [routerLink]="['/user']">保存</button>
+                    <button type="submit" (click)="save(myForm.value)" id="profile-submit"  hidefocus="true"  class="rlf-btn-green btn-block profile-btn" [routerLink]="['/user']">保存</button>
                   </div>
                 </div>
-              </form>
+         </form>
 
-            </div>
-          </div>
         </div>
-      </div>
-
-    </div>
-
+        </div>
+        </div>
+        </div>
+        </div>
   </div>
-
-</div>
-
-<div>
 
 </div>
 
