--- a/JiuJiuWeb/src/app/HomePage/signup/signup.component.html
+++ b/JiuJiuWeb/src/app/HomePage/signup/signup.component.html
@@ -31,7 +31,7 @@
         </div>
 
       </div>
-      <a class="btn rounded-btn" [routerLink]="['/usercenter']"> Register </a>&nbsp;
+      <button class="btn rounded-btn" type="submit"> Register </button>&nbsp;
       <a class="btn rounded-btn" [routerLink]="['/admin']" > Log in </a>
     </form>
   </div>
