--- a/JiuJiuWeb/src/app/AdminWebsite/admin/right/admin-right/admin-right.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/right/admin-right/admin-right.component.html
@@ -1,6 +1,5 @@
 <div>
   <!-- 轮播图 -->
-
   <div class="row carousel-container  ">
     <div class="carousel slide " data-ride="carousel">
       <ol class="carousel-indicators">
@@ -9,14 +8,14 @@
         <li></li>
       </ol>
       <div class="carousel-inner">
+        <div class="item">
+          <img class="slide-image img-responsive" src="assets/images/lunbo5.png" alt=""/>
+        </div>
         <div class="item active">
-          <img class="slide-image img-responsive" src="assets/images/lunbo2.jpeg" alt=""/>
+          <img class="slide-image img-responsive" src="assets/images/lunbo6.png" alt=""/>
         </div>
         <div class="item">
-          <img class="slide-image img-responsive" src="assets/images/lunbo3.jpeg" alt=""/>
-        </div>
-        <div class="item">
-          <img class="slide-image img-responsive" src="assets/images/lunbo1.jpeg" alt=""/>
+          <img class="slide-image img-responsive" src="assets/images/lunbo7.png" alt=""/>
         </div>
       </div>
       <a class="left carousel-control" href="javascript:$('.carousel').carousel('prev')">
