--- a/JiuJiuWeb/src/app/HomePage/page/page.component.html
+++ b/JiuJiuWeb/src/app/HomePage/page/page.component.html
@@ -6,13 +6,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="item active" >
-      <img class="slide-image" src="assets/images/lunbo1.jpeg" alt=""/>
+      <img class="slide-image" src="assets/images/lunbo1.png" alt=""/>
     </div>
     <div class="item">
-      <img class="slide-image" src="assets/images/lunbo2.jpeg" alt=""/>
+      <img class="slide-image" src="assets/images/lunbo2.png" alt=""/>
     </div>
     <div class="item">
-      <img class="slide-image" src="assets/images/lunbo3.jpeg" alt=""/>
+      <img class="slide-image" src="assets/images/lunbo3.png" alt=""/>
     </div>
   </div>
   <a class="left carousel-control" href="javascript:$('.carousel').carousel('prev')">
