--- a/JiuJiuWeb/src/app/app.component.html
+++ b/JiuJiuWeb/src/app/app.component.html
@@ -20,7 +20,7 @@
             <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
-            <li><a [routerLink]="['/usercenter']">个人中心</a></li>
+            <li><a *ngIf="checkadmin()" [routerLink]="['/usercenter']">个人中心</a></li>
             <li><a (click)="exit()">退出登录</a></li>
           </ul>
         </li>
