--- a/JiuJiuWeb/src/app/AdminWebsite/admin/right/add-article/add-article.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/right/add-article/add-article.component.html
@@ -44,9 +44,9 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="category" class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;">所属栏目</label>
+                  <label for="cateid" class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;">所属栏目</label>
                   <div class="col-lg-2 col-md-2">
-                    <select class="form-control" [(ngModel)]="data.category" name="category" id="cate">
+                    <select class="form-control" [(ngModel)]="data.cateid" name="cateid" id="cateid">
                       <!--需要从数据库查！！！-->
                       <option>美食</option>
                       <option>运动</option>
