--- a/JiuJiuWeb/src/app/UserWebsite/user/user.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/user/user.component.html
@@ -4,7 +4,7 @@
 <div>
   <ul class="listbox">
     <a>
-    <li *ngFor="let item of cates" (click)="search(item.name)" [ngStyle]="{cour:isclick}">{{item.name}} </li>
+    <li *ngFor="let item of cates" (click)="search(item.catename)" [ngStyle]="{cour:isclick}">{{item.catename}} </li>
     </a>
   </ul>
 </div>
