--- a/JiuJiuWeb/src/app/app.component.html
+++ b/JiuJiuWeb/src/app/app.component.html
@@ -21,6 +21,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a *ngIf="checkadmin()" [routerLink]="['/usercenter']">个人中心</a></li>
+            <li><a *ngIf="checkadmin()">修改密码</a> </li>
             <li><a (click)="exit()">退出登录</a></li>
           </ul>
         </li>
