--- a/JiuJiuWeb/src/app/UserWebsite/user/user.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/user/user.component.html
@@ -2,17 +2,20 @@
   <app-carousel></app-carousel>
 </div> -->
 <div>
-  <ul class="listbox">
-    <a>
-    <li *ngFor="let item of cates" (click)="search(item)" [ngStyle]="{cour:isclick}">{{item.catename}} </li>
-    </a>
-  </ul>
+  <nav>
+    <ul>
+     <!-- <li *ngFor="let item of cates" (click)="search(item)" [ngStyle]="{cour:isclick}">{{item.catename}}</li>
+    -->
+      <li><a class="hhh">首页</a></li>
+    </ul>
+  </nav>
 </div>
 
 <div class="overall" style="margin-top: 30px">
   <div class="right">
     <div>
-      <div style="display: block; margin: 0px; padding: 0px; float: none; clear: none; overflow: hidden; position: relative; border: 0px none; background: transparent none repeat scroll 0% 0%; max-width: none; max-height: none; border-radius: 0px; box-shadow: none; transition: none 0s ease 0s ; text-align: left; box-sizing: content-box; width: 300px;">
+      <div
+        style="display: block; margin: 0px; padding: 0px; float: none; clear: none; overflow: hidden; position: relative; border: 0px none; background: transparent none repeat scroll 0% 0%; max-width: none; max-height: none; border-radius: 0px; box-shadow: none; transition: none 0s ease 0s ; text-align: left; box-sizing: content-box; width: 300px;">
         <div class="hm-t-container" style="width: 298px;">
           <div class="hm-t-main">
             <div class="hm-t-header">热门点击</div>
@@ -32,7 +35,8 @@
     </div>
     <div style="height:15px"></div>
     <div>
-      <div style="display: block; margin: 0px; padding: 0px; float: none; clear: none; overflow: hidden; position: relative; border: 0px none; background: transparent none repeat scroll 0% 0%; max-width: none; max-height: none; border-radius: 0px; box-shadow: none; transition: none 0s ease 0s ; text-align: left; box-sizing: content-box; width: 300px;">
+      <div
+        style="display: block; margin: 0px; padding: 0px; float: none; clear: none; overflow: hidden; position: relative; border: 0px none; background: transparent none repeat scroll 0% 0%; max-width: none; max-height: none; border-radius: 0px; box-shadow: none; transition: none 0s ease 0s ; text-align: left; box-sizing: content-box; width: 300px;">
         <div style="width: 298px;" class="hm-t-container">
           <div class="hm-t-main">
             <div class="hm-t-header">推荐阅读</div>
@@ -61,7 +65,7 @@
             <form id="bdcs-search-form" autocomplete="off" class="bdcs-search-form" target="_blank" method="get"
                   action="{:url('Search/index')}">
               <input type="text" placeholder="请输入关键词" class="form-control" [formControl]="titleFilter"
-                     class="bdcs-search-form-input"  autocomplete="off"
+                     class="bdcs-search-form-input" autocomplete="off"
                      style="line-height: 30px; width:220px;">
               <input type="submit" value="搜索" id="bdcs-search-form-submit"
                      class="bdcs-search-form-submit bdcs-search-form-submit-magnifier">
@@ -76,7 +80,7 @@
 
     <div style="height:15px"></div>
   </div>
-    <div class="left" *ngFor="let item of articles|filter:'title':keyword">
+  <div class="left" *ngFor="let item of articles|filter:'title':keyword">
     <div class="xnews">
       <div class="pic">
         <a href="">
@@ -90,7 +94,7 @@
         <p>{{item.author}}</p>
         <p class="time">发布时间：{{item.time}}</p>
         <p>{{item.desc}}</p>
-       <div style="font-size: medium">{{item.content}}</div>
+        <div style="font-size: medium">{{item.content}}</div>
         <p>标签：{{item.keywords}}</p>
       </div>
     </div>
