--- a/JiuJiuWeb/src/app/HomePage/aboutus/aboutus.component.html
+++ b/JiuJiuWeb/src/app/HomePage/aboutus/aboutus.component.html
@@ -2,31 +2,31 @@
   <img src="../assets/images/AboutUs.jpeg" class="img-responsive">
 </div>
 <div class="contact-wrap">
-  <div>
-    <img src="../assets/images/vision.png">
-    <span>网站介绍</span>
+  <div class="row">
+    <img class="col-lg-1 col-md-1" src="../assets/images/vision.png">
+    <h4 class="col-lg-2 col-md-2">网站介绍</h4>
   </div>
-  <div class="contact-list">
+  <div class="contact-list" style="margin-left: 100px;">
     <p>本网站基于智慧校园服务平台，从学习、生活等各个方面，致力于把学校变成一个完美校园，与学校共同创造，服务学生“轻松生活，快乐成长”！</p>
   </div>
 </div>
 
 <div class="contact-wrap">
-  <div>
-    <img src="../assets/images/friends.png">
-    <span>团队介绍</span>
+  <div class="row">
+    <img class="col-lg-1 col-md-1" src="../assets/images/friends.png">
+    <h4 class="col-lg-2 col-md-2">团队介绍</h4>
   </div>
-  <div class="contact-list">
+  <div class="contact-list" style="margin-left: 100px;">
     <p class="inline-p">团队成员：</p>
   </div>
 </div>
 
 <div class="contact-wrap">
-  <div>
-    <img src="../assets/images/contact.png">
-    <span>联系我们</span>
+  <div class="row">
+    <img class="col-lg-1 col-md-1"  src="../assets/images/contact.png">
+    <h4 class="col-lg-2 col-md-2">联系我们</h4>
   </div>
-  <div class="contact-list">
+  <div class="contact-list" style="margin-left: 100px;">
     <p class="inline-p">邮箱: JiuJiuWeb@163.com</p>
     <p>400-888-8888(客服)</p>
     <p>地址: 天津大学北洋园校区第五十五教学楼A座软件学院</p>
